@@ -79,12 +79,14 @@ void testmemory(void)
   ASSERT(strlen("") == 0);
 }
 
-#if defined(__SDCC_stm8) || defined(__SDCC_z80) || defined(__SDCC_z180) || defined(__SDCC_r2k) || defined(__SDCC_r3ka)
+#if defined(__SDCC_stm8) || defined(__SDCC_z80) || defined(__SDCC_z180) || defined(__SDCC_r2k) || defined(__SDCC_r3ka) || defined(PORT_HOST)
 unsigned char largedest[1050];
 unsigned char largesource[1050];
+#endif
 
 void testLarge(void)
 {
+#if defined(__SDCC_stm8) || defined(__SDCC_z80) || defined(__SDCC_z180) || defined(__SDCC_r2k) || defined(__SDCC_r3ka) || defined(PORT_HOST)
   memset(largedest, 0, 1050);
   memset(largedest, 1, 4);
   memset(largesource, 2, 1050);
@@ -95,7 +97,8 @@ void testLarge(void)
   ASSERT(largedest[1] == 2);
   ASSERT(largedest[1024] == 2);
   ASSERT(largedest[1025] == 0);
+#endif
 }
 
-#endif
+
 
